adapt gitbook architecture to corresponding vitepress

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "documentation-tools",
+  "private": true,
+  "type": "module",
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
