--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:preview": "vitepress preview",
+    "check-format": "prettier --check .",
+    "format": "prettier --write ."
   },
   "devDependencies": {
+    "prettier": "^3.2.5",
     "vitepress": "^1.0.0-rc.45"
   }
 }
