--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "arrowParens": "always",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "proseWrap": "always"
 }
