--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@shikijs/vitepress-twoslash": "^1.2.0",
     "prettier": "^3.2.5",
-    "vitepress": "^1.0.0-rc.45"
+    "vitepress": "^1.0.1"
   },
   "dependencies": {
     "@iexec/dataprotector": "^2.0.0-nightly-b23a0b206c2e75190a2eb5cb364b9c2709b13ebe",
