--- a/.drone.yml
+++ b/.drone.yml
@@ -19,6 +19,11 @@ steps:
     commands:
       - npm run check-format
 
+  - name: Check that it builds
+    image: node:20
+    commands:
+      - npm run build
+
   - name: Vercel deploy to prod
     image: node:20
     environment:
@@ -57,6 +62,11 @@ steps:
     image: node:20
     commands:
       - npm run check-format
+
+  - name: Check that it builds
+    image: node:20
+    commands:
+      - npm run build
 
   - name: Vercel deploy to preview
     image: node:20
