--- a/.drone.yml
+++ b/.drone.yml
@@ -22,7 +22,7 @@ steps:
   - name: Check that it builds
     image: node:20
     commands:
-      - npm run build
+      - npm run docs:build
 
   - name: Vercel deploy to prod
     image: node:20
@@ -66,7 +66,7 @@ steps:
   - name: Check that it builds
     image: node:20
     commands:
-      - npm run build
+      - npm run docs:build
 
   - name: Vercel deploy to preview
     image: node:20
