--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vitepress": "^1.1.4"
   },
   "dependencies": {
-    "@iexec/dataprotector": "^2.0.0-nightly-1563509ff1877e6259aee241338bbe564c0465b2",
+    "@iexec/dataprotector": "^2.0.0-beta.1",
     "@iexec/iexec-oracle-factory-wrapper": "^2.1.0",
     "@iexec/web3mail": "^0.6.0",
     "vue": "^3.4.21"
