--- a/.github/workflows/preview-greg.yml
+++ b/.github/workflows/preview-greg.yml
@@ -7,7 +7,7 @@ env:
 on:
   push:
     branches:
-      - v2_Docs_refactor_phase_3
+      - v2-greg
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
