--- a/.drone.yml
+++ b/.drone.yml
@@ -32,7 +32,7 @@ steps:
       VERCEL_TOKEN:
         from_secret: vercel-token
     commands:
-      - npm install --global vercel@canary
+      - npm install --global vercel@34.1.7
       - vercel pull --yes --environment=production --scope i-exec --token $VERCEL_TOKEN
       - SET_SUBPATH_FOR_PROD=true VITE_APP_COMMIT=${DRONE_COMMIT} vercel build --prod --scope i-exec --token $VERCEL_TOKEN
       - vercel deploy --prod --prebuilt --scope i-exec --token $VERCEL_TOKEN
