--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@iconify/vue": "^4.1.2",
     "@shikijs/vitepress-twoslash": "^1.2.0",
     "prettier": "^3.2.5",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-vue-components": "^0.27.0",
     "vitepress": "^1.1.4"
   },
   "dependencies": {
