chore: Update npm dependencies to include @web3modal/wagmi, react, react-dom, and wagmi

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@iexec/dataprotector-deserializer": "^0.1.0",
     "@iexec/iexec-oracle-factory-wrapper": "^2.1.0",
     "@iexec/web3mail": "^0.6.0",
-    "vue": "^3.4.21"
+    "@web3modal/wagmi": "^3.5.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vue": "^3.4.21",
+    "wagmi": "^1.4.12"
   }
 }
