--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@iexec/iexec-oracle-factory-wrapper": "^2.1.0",
     "@iexec/web3mail": "^0.6.0",
     "@web3modal/wagmi": "^3.5.2",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vue": "^3.4.21",
