--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "vitepress": "^1.1.4"
   },
   "dependencies": {
-    "@iexec/dataprotector": "^2.0.0-beta.2",
+    "@iexec/dataprotector": "2.0.0-beta.4",
     "@iexec/dataprotector-deserializer": "^0.1.0",
     "@iexec/iexec-oracle-factory-wrapper": "^2.1.0",
     "@iexec/web3mail": "^0.6.0",
-    "@web3modal/wagmi": "^3.5.2",
+    "@wagmi/connectors": "^5.0.19",
+    "@wagmi/core": "^2.11.5",
+    "@web3modal/wagmi": "^5.0.3",
     "dotenv": "^16.4.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vue": "^3.4.21",
-    "wagmi": "^1.4.12"
+    "viem": "^2.16.3",
+    "vue": "^3.4.21"
   }
 }
