--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "type": "module",
   "scripts": {
     "dev": "vitepress dev",
-    "build": "vitepress build",
+    "build": "npm run tailwind:build && vitepress build",
     "preview": "vitepress preview",
     "check-format": "prettier --check .",
-    "format": "prettier --write ."
-  },
-  "devDependencies": {
-    "@iconify/vue": "^4.1.2",
-    "@shikijs/vitepress-twoslash": "^1.2.0",
-    "prettier": "^3.2.5",
-    "vitepress": "^1.1.4"
+    "format": "prettier --write .",
+    "tailwind:build": "npx tailwindcss -i ./components/input.css -o .vitepress/theme/tailwind-output.css",
+    "tailwind:watch": "npm run tailwind:build -- --watch"
   },
   "dependencies": {
+    "@download/blockies": "^1.0.3",
     "@iexec/dataprotector": "2.0.0-beta.4",
     "@iexec/dataprotector-deserializer": "^0.1.0",
     "@iexec/iexec-oracle-factory-wrapper": "^2.1.0",
@@ -26,5 +23,13 @@
     "dotenv": "^16.4.5",
     "viem": "^2.16.3",
     "vue": "^3.4.21"
+  },
+  "devDependencies": {
+    "@iconify/vue": "^4.1.2",
+    "@shikijs/vitepress-twoslash": "^1.2.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "^3.4.4",
+    "vitepress": "^1.1.4"
   }
 }
