--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@iexec/dataprotector-deserializer": "^0.1.0",
     "@iexec/iexec-oracle-factory-wrapper": "^2.1.0",
     "@iexec/web3mail": "^1.0.2",
+    "@iexec/web3telegram": "file:../web3telegram",
     "vue": "^3.4.21"
   }
 }
