--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@iexec/dataprotector": "^2.0.0-beta.7",
     "@iexec/dataprotector-deserializer": "^0.1.0",
-    "@iexec/iexec-oracle-factory-wrapper": "^2.1.0",
+    "@iexec/iexec-oracle-factory-wrapper": "2.1.0-nightly-6d4efee53d4abf41f12ff21f4e42546890092fa9",
     "@iexec/web3mail": "^1.0.2",
     "vue": "^3.4.21"
   }
