Can adapt which vercel token is used

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -35,9 +35,18 @@ jobs:
       - name: Check Prettier
         run: npm run check-format
 
+      - name: Set Vercel Token
+        id: set-vercel-token
+        run: |
+          if [ "${{ github.actor }}" = "ErwanDecoster" ]; then
+            echo "vercel_token=${{ secrets.VERCEL_TOKEN_ERWAN }}" >> $GITHUB_OUTPUT
+          else
+            echo "vercel_token=${{ secrets.VERCEL_TOKEN }}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Vercel deploy to preview
         run: |
           npm install --global vercel@latest
-          vercel pull --yes --scope i-exec --token=${{ secrets.VERCEL_TOKEN }}
-          vercel build --scope i-exec --token=${{ secrets.VERCEL_TOKEN }}
-          vercel deploy --prebuilt --scope i-exec --token=${{ secrets.VERCEL_TOKEN }}
+          vercel pull --yes --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }}
+          vercel build --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }}
+          vercel deploy --prebuilt --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }}
