--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@iexec/dataprotector": "^2.0.0-beta.10",
     "@iexec/dataprotector-deserializer": "^0.1.0",
     "@iexec/iexec-oracle-factory-wrapper": "^2.3.0",
-    "@iexec/web3mail": "^1.0.2",
+    "@iexec/web3mail": "^1.0.4-nightly-f719ea2273dd8288ff774bb4aff1a174e31eef40",
     "vue": "^3.4.21"
   }
 }
