--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "@iexec/dataprotector-deserializer": "^0.1.0",
     "@iexec/iexec-oracle-factory-wrapper": "^2.5.0",
     "@iexec/web3mail": "^1.1.1",
+    "@reown/appkit": "^1.6.5",
+    "@reown/appkit-adapter-wagmi": "^1.6.5",
+    "@tanstack/vue-query": "^5.64.2",
     "@wagmi/connectors": "^5.0.19",
     "@wagmi/core": "^2.11.5",
+    "@wagmi/vue": "^0.1.8",
     "@web3modal/wagmi": "^5.0.3",
     "dotenv": "^16.4.5",
-    "viem": "^2.16.3",
+    "viem": "^2.22.12",
     "vue": "^3.5.12"
   }
 }
