--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -44,9 +44,9 @@ jobs:
             echo "vercel_token=${{ secrets.VERCEL_TOKEN }}" >> $GITHUB_OUTPUT
           fi
 
-      - name: Vercel deploy to preview
-        run: |
-          npm install --global vercel@latest
-          vercel pull --yes --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }}
-          vercel build --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }}
-          vercel deploy --prebuilt --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }}
+          - name: Vercel deploy to preview
+          run: |
+            npm install --global vercel@latest
+            vercel pull --yes --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }}
+            vercel build --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }}
+            vercel deploy --prebuilt --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }} --name documentation-tools-${{ github.ref_name }}
