--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -49,5 +49,4 @@ jobs:
           npm install --global vercel@latest
           vercel pull --yes --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }}
           vercel build --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }}
-          BRANCH_NAME=$(echo "${{ github.ref_name }}" | sed 's/\//-/g') 
-          vercel deploy --prebuilt --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }} --name documentation-tools-${BRANCH_NAME}
+          vercel deploy --prebuilt --scope i-exec --token=${{ steps.set-vercel-token.outputs.vercel_token }} --name documentation-tools-fix-vercel-preview-link-is-same-for-all-branch
