--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 **/.vitepress/cache
 **/.vitepress/dist
+**/.vscode
 node_modules
 auto-imports.d.ts
 components.d.ts
@@ -7,3 +8,4 @@ components.d.ts
 #mac
 .DS_Store
 .env
+**/tailwind-output.css
