--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@wagmi/vue": "^0.1.8",
     "dotenv": "^16.4.5",
     "viem": "^2.22.12",
+    "vitepress-plugin-google-analytics": "^1.0.2",
     "vue": "^3.5.12"
   }
 }
