add hello word redirection

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "source": "/tools/dataprotector/:path*",
       "destination": "/tools/dataProtector/:path*"
+    },
+    {
+      "source": "/overview/helloWorld/0-hello",
+      "destination": "/overview/helloWorld"
     }
   ]
 }
