--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ env:
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_TOOLS_DOC_PROJECT_ID }}
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
