--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
-    "@shikijs/vitepress-twoslash": "^1.22.0",
+    "@shikijs/vitepress-twoslash": "^3.2.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-vue-components": "^0.27.4",
-    "vitepress": "^1.4.1"
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-group-icons": "^1.3.8"
   },
   "dependencies": {
-    "@iexec/dataprotector": "^2.0.0-beta.12",
+    "@iexec/dataprotector": "^2.0.0-beta.13",
     "@iexec/dataprotector-deserializer": "^0.1.1",
-    "@iexec/iexec-oracle-factory-wrapper": "^2.5.0",
-    "@iexec/web3mail": "^1.1.1",
-    "@iexec/web3telegram": "^0.0.1-alpha",
+    "@iexec/iexec-oracle-factory-wrapper": "^2.6.0",
+    "@iexec/web3mail": "^1.2.0",
+    "@iexec/web3telegram": "^0.0.2-alpha",
     "@reown/appkit": "^1.6.5",
     "@reown/appkit-adapter-wagmi": "^1.6.5",
     "@tanstack/vue-query": "^5.64.2",
