--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tanstack/vue-query": "^5.64.2",
     "@wagmi/vue": "^0.1.8",
     "dotenv": "^16.4.5",
+    "turndown": "^7.2.0",
     "viem": "^2.22.12",
     "vitepress-plugin-google-analytics": "^1.0.2",
     "vue": "^3.5.12"
