--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "vitepress-plugin-group-icons": "^1.3.8"
   },
   "dependencies": {
-    "@iexec/dataprotector": "^2.0.0-beta.16",
+    "@iexec/dataprotector": "^2.0.0-beta.18",
     "@iexec/dataprotector-deserializer": "^0.1.1",
     "@iexec/iexec-oracle-factory-wrapper": "^2.6.0",
-    "@iexec/web3mail": "^1.2.0",
-    "@iexec/web3telegram": "^0.0.3-alpha",
+    "@iexec/web3mail": "^1.4.0",
+    "@iexec/web3telegram": "^0.1.0-alpha.3",
     "@reown/appkit": "^1.6.5",
     "@reown/appkit-adapter-wagmi": "^1.6.5",
     "@tanstack/vue-query": "^5.64.2",
